--- a/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
+++ b/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
@@ -49,6 +49,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarRozvrhDropdown">
             <div class="dropdown-info">
                 Počet dní: @PlachtaService.AktualnyRozvrh.Dni.Count<br />
+                Začiatok: @PlachtaService.AktualnyRozvrh.ZaciatokRozvrhu?.ToString("d.MMMM")<br />
                 Začiatočný deň: @PlachtaService.AktualnyRozvrh.ZaciatokStr<br />
                 Začiatok dňa: @PlachtaService.AktualnyRozvrh.ZaciatokDna<br />
                 Koniec dňa: @PlachtaService.AktualnyRozvrh.KoniecDna<br />
