--- a/Plachtovac/Client/wwwroot/css/site.css
+++ b/Plachtovac/Client/wwwroot/css/site.css
@@ -392,3 +392,10 @@ ul.sablonyAktivit {
         position: absolute;
         border: 1px solid black;
     }*/
+
+
+.portrait h1 {
+    text-align: center;
+    font-size: 1.2rem;
+    margin: 0;
+}
