--- a/Plachtovac/Client/Components/Forms/AktivitaDesignerView.razor
+++ b/Plachtovac/Client/Components/Forms/AktivitaDesignerView.razor
@@ -9,9 +9,10 @@
 @using Plachtovac.Client.Services
 @using Plachtovac.Shared.BO
 @using Plachtovac.Shared.BO.GraphicsBlocks
+@using Plachtovac.Client.Components.Plachta
 
 
-@inherits CanvasEditor
+@inherits Plachtovac.Client.Components.Plachta.CanvasEditor
 
 @if (_imageConversionInProgress)
 {
