--- a/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
+++ b/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
@@ -1,6 +1,7 @@
 ﻿@using Plachtovac.Shared.BO.GraphicsBlocks
 @using Blazorise
 @using System.ComponentModel
+@using Plachtovac.Client.Components.Forms
 
 
 @if (GraphicsItem is TextGraphicsItem textItem)
