--- a/Plachtovac/Client/Components/Plachta/AktivitaDesignerView.razor
+++ b/Plachtovac/Client/Components/Plachta/AktivitaDesignerView.razor
@@ -50,10 +50,7 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" @onclick="() => InsertText(Sablona.Nazov)">Text</a>
-                @if (Sablona.Veduci.Count > 0)
-                {
-                    <a class="dropdown-item" @onclick="InsertZoznamVeducich">Zoznam vedúcich</a>
-                }
+                <a class="dropdown-item" @onclick="InsertZoznamVeducich">Zoznam vedúcich</a>
                 <a class="dropdown-item" @onclick="() => InsertExternalImage(Width - 10, Height - 10)">Obrázok z url</a>
                 <a class="dropdown-item btn btn-fileOpen" style="position: relative">
                     Obrázok zo súboru
@@ -122,7 +119,13 @@
             FontFamily = "Comic Sans",
         };
 
-        textAktivita.NastavZoznamVeducich(Sablona.Veduci);
+        var veduci = Sablona.Veduci;
+        if (Sablona.Veduci.Count == 0)
+        {
+            veduci = new List<AktivitaVeduci> { new AktivitaVeduci { Veduci = new Veduci { Prezyvka = "Veduci1" } }, new AktivitaVeduci { Veduci = new Veduci { Prezyvka = "Veduci2" } } };
+        }
+
+        textAktivita.NastavZoznamVeducich(veduci);
 
         await InsertItem(textAktivita);
 
