Obmedzená maximalna velkost fotky

--- a/Plachtovac/Client/Pages/ViewOnly.razor
+++ b/Plachtovac/Client/Pages/ViewOnly.razor
@@ -49,9 +49,9 @@
 
 
             <div class="row">
-                <div class="border-rb col-9">
+                <div class="border-rb col-8">
                     <div class="row">
-                        <div class="col border-0">
+                        <div class="col col-6 border-0">
                             <div class="row h-100">
                                 <div class="col col-horizontal">
                                     <h2>Vedúci družín:</h2>
@@ -66,7 +66,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col border-right-0 photo">
+                        <div class="col col-6 border-right-0 photo">
                             <img src="@veduci.Fotka" />
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <string>Bonusy</string>
                     </div>
                 </div>
-                <div class="border-rb col-3">
+                <div class="border-rb col-4">
                     <h2>Zoznam prednášok:</h2>
                     todo
                 </div>
