--- a/Plachtovac/Client/wwwroot/css/site.css
+++ b/Plachtovac/Client/wwwroot/css/site.css
@@ -425,4 +425,10 @@ ul.sablonyAktivit {
 .photo {
     text-align: center;
     padding: 1px;
+    width: 50%;
+}
+
+.photo img {
+    max-width: 100%;
+    max-height: 100%;
 }
