Dorobenie položiek do tlače

--- a/Plachtovac/Client/Pages/ViewOnly.razor
+++ b/Plachtovac/Client/Pages/ViewOnly.razor
@@ -17,17 +17,20 @@
             <div class="row">
                 <div class="col program-dna">
                     <h2>Program dňa:</h2>
-                    <table>
-                        @foreach (var row in Rozvrh.Program.Split("\n"))
-                        {
-                            var parts = row.Split(" ");
-                            var cas = parts.First();
-                            var program = string.Join(" ", parts.Skip(1));
-                            <span class="program-cas">@cas</span>
-                            @program
-                            <br />
-                        }
-                    </table>
+                    @if (!string.IsNullOrWhiteSpace(Rozvrh.Program))
+                    {
+                        <table>
+                            @foreach (var row in Rozvrh.Program.Split("\n"))
+                            {
+                                var parts = row.Split(" ");
+                                var cas = parts.First();
+                                var program = string.Join(" ", parts.Skip(1));
+                                <span class="program-cas">@cas</span>
+                                @program
+                                <br/>
+                            }
+                        </table>
+                    }
                 </div>
                 <div class="col">
                     <h2>Môj program</h2>
@@ -66,10 +69,23 @@
                                 </div>
                                 <div class="col col-horizontal">
                                     <h2>Zoznam krúžkov</h2>
-                                    todo
+                                    @{
+                                        var kruzkyAktivita = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Krúžok");
+                                        if (kruzkyAktivita != null)
+                                        {
+                                            foreach (var kruzok in kruzkyAktivita.Veduci.GroupBy(v => v.Popis))
+                                            {
+                                                @string.Join(", ", kruzok.Select(v => v.Veduci.Prezyvka))<text>:</text> @kruzok.Key<br />
+                                            }
+                                        }
+                                    }
                                 </div>
                                 <div class="col col-horizontal">
-                                    Čo si mam doniesť?
+                                    <h2>čo si mám doniesť (okrem vecí na svoj program)</h2>
+                                    <ul>
+                                        <li>Čokoládu či koláč 😁</li>
+                                        <li>Notebook a/alebo gitaru, ak si to na chystačke sľúbil</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -78,30 +94,80 @@
                         </div>
                     </div>
                     <div class="row">
-                        <string>Bonusy</string>
+                        <div class="col">
+                            <h2>Bonusy:</h2>
+                            @{
+                                var zoznamBonusov = Rozvrh.Veduci.SelectMany(v => v.Ulohy.Select(u => new { v.Prezyvka, u })).GroupBy(x => x.u);
+                                @foreach (var bonus in zoznamBonusov)
+                                {
+                                    @bonus.Key<text>:</text>
+                                    @string.Join(", ", bonus.Select(v => v.Prezyvka))<br />
+                                }
+                            }
+                        </div>
                     </div>
                 </div>
                 <div class="border-rb col-4">
                     <h2>Zoznam prednášok:</h2>
-                    todo
+                    @{
+                        var prednasky = Rozvrh.Dni
+                            .SelectMany(
+                                d => d.Aktivity.OrderBy(a => a.Time).Where(a => a.Sablona.Typ == "Prednáška")
+                                    .SelectMany((a, i) => a.Veduci.Select(a => new { Veduci = a, N = i })));
+                        foreach (var aktivitaVeduci in prednasky)
+                        {
+                            if (aktivitaVeduci.Veduci.Popis?.Length > 2)
+                            {
+                                <text>(@aktivitaVeduci.Veduci.Popis[0]@aktivitaVeduci.N) @aktivitaVeduci.Veduci.Veduci.Prezyvka: @aktivitaVeduci.Veduci.Popis.Substring(2)</text><br />
+                            }
+                        }
+                    }
                 </div>
             </div>
 
             <div class="row">
                 <div class="border-rb col-9">
                     <h2>Semináre:</h2>
-                    todo
+                    @{
+                        var seminare = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Seminár");
+                        if (seminare != null)
+                        {
+                            foreach (var seminar in seminare.Veduci)
+                            {
+                                <text>@seminar.Veduci.Prezyvka: @seminar.Popis</text><br />
+                            }
+                        }
+                    }
                 </div>
                 <div class="border-rb col-3">
                     <h2>Rozprávania:</h2>
-                    todo
+                    @{
+                        var rozpravania = Rozvrh.Dni
+                            .SelectMany(
+                                d => d.Aktivity.OrderBy(a => a.Time).Where(a => a.Sablona.Typ == "Rozprávanie")
+                                    .SelectMany((a, i) => a.Veduci.Select(a => new { Veduci = a, N = i })));
+                        foreach (var rozpravanieBloky in rozpravania.GroupBy(x => x.N))
+                        {
+                            @rozpravanieBloky.Key;
+                            foreach (var rozpravanie in rozpravanieBloky)
+                            {
+                                <text>(@rozpravanie.Veduci.Veduci.Prezyvka: @rozpravanie.Veduci.Popis</text><br />
+                            }
+                        }
+                    }
                 </div>
             </div>
 
             <div class="row">
                 <div class="col col-full">
                     <h2>A ešte</h2>
-                    todo
+                    <ul>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                    </ul>
                 </div>
             </div>
         </div>
