--- a/Plachtovac/Client/Components/Forms/PridajSablonuAktivityForm.razor
+++ b/Plachtovac/Client/Components/Forms/PridajSablonuAktivityForm.razor
@@ -64,7 +64,7 @@
         }
     }
 
-    private string[] typyAktivit = {"Krúžok", "Seminár", "Prednáška", "Rozprávania"};
+    private string[] typyAktivit = {"Krúžok", "Seminár", "Prednáška", "Rozprávanie"};
 
     private AktivitaSablona _sablona = new AktivitaSablona();
 
