Hromadná editacia vedúcich

--- a/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
+++ b/Plachtovac/Client/Components/Plachta/PlachtaMenu.razor
@@ -40,6 +40,9 @@
         <a class="nav-link" href="editor">Editor</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="dataeditor">Editor dát</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="view">Tlačiť</a>
     </li>
     <li class="nav-item dropdown">
